package com.wesdell.college_system.interfaces;

public enum AssignmentType {
    TEST,
    HOMEWORK,
    PROJECT,
    WORKSHOP
}
