package com.wesdell.college_system.interfaces;

public enum EnrollmentStatus {
    ACTIVE,
    DROPPED,
    FINISHED
}
