package com.wesdell.college_system.interfaces;

public enum Gender {
    MALE, FEMALE
}
