package com.wesdell.college_system.interfaces;

public enum Modality {
    FACE_TO_FACE,
    REMOTE
}
