@startuml
' Entities
class College {
    +id: Long
    +name: String
    +description: String
}
class Faculty {
    +id: Long
    +name: String
    +description: String
    +dean: String
}
class Classroom {
    +id: Long
    +roomNumber: String
    +capacity: int
    +location: String
}
class Career {
    +id: Long
    +name: String
    +description: String
}
class Subject {
    +id: Long
    +name: String
    +code: String
    +credits: int
    +description: String
}
class Course {
    +id: Long
    +name: String
    +capacity: int
    +modality: Modality
    +schedule: Date
}
class Assignment {
    +id: Long
    +type: AssignmentType
    +description: String
    +weight: int
}
class Grade {
    +id: Long
    +value: Double
}
class Student {
    +id: Long
    +name: String
    +lastName: String
    +institutionalEmail: String
    +enrollment: Enrollment
    +birthday: Date
    +gender: Gender
}
class Professor {
    +id: Long
    +name: String
    +lastName: String
    +institutionalEmail: String
    +birthday: Date
    +gender: Gender
}
class Enrollment {
    +id: Long
    +signUpDate: Date
    +status: EnrollmentStatus
    +maxCredits: int
}
enum Gender {
    +MALE
    +FEMALE
    +OTHER
}
enum Modality {
    +FACE_TO_FACE
    +REMOTE
}
enum EnrollmentStatus {
    +ACTIVE
    +DROPPED
    +FINISHED
}
enum AssignmentType {
    +TEST
    +HOMEWORK
    +PROJECT
    +WORKSHOP
}

' Relations
College "1" -r-> "1..*" Faculty
Faculty "1" --> "1..*" Career
Career "1" --> "1..*" Subject
Subject "1" -r-> "1..*" Course
Course "1" --> "1..*" Classroom
Course "1" --> "1" Professor
Course "1" -r-> "1..*" Student
Student "1" --> "1" Enrollment
Enrollment "1" --> "1..*" Subject
Subject "1" --> "1" Grade
Subject "1" -l-> "1..*" Assignment
Assignment "1" --> "1" Grade

@enduml